--- a/day4/Image_Hover_Effect.html
+++ b/day4/Image_Hover_Effect.html
@@ -64,7 +64,7 @@
 	<body>
 		<h2>Image Overlay Effect</h2>
 		<div class="container-img">
-			<img src="Images/Skills_Image.jpg" alt="Demo Image" class="image">
+			<img src=".jpg" alt="Demo Image" class="image">
 			<div class="overlay">
 				<div class="text">Mr.Naimish Patel</div>
 		    </div>
